# feishu-wiki

./: .feishu-config.json  .feishu-index.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT-CONTEXT.md  README.md  SKILL.md  codex.json  default-config.json  feishu_wiki.py  log.md  package.json  pyproject.toml  refresh-index.py  日志.md  阅读队列.md
.claude/skills/feishu-wiki/: SKILL.md
agents/: claude.yaml  openai.yaml
feishu_wiki/: __init__.py  __main__.py  cli.py  core.py  onboarding.py
lib/: commands.js  core.js  lark.js  lock.js  search.js
raw/articles/: llm-wiki-karpathy.md
references/: architecture.md
scripts/: build-index.js  postinstall.js
src/: package.json
src/feishu_wiki/: SKILL.md  __init__.py  _post_install.py  _version_check.py  cli.py  core.py  lock.py  onboarding.py  search.py
src/feishu_wiki/agents/: openai.yaml
src/feishu_wiki/references/: architecture.md
src/feishu_wiki/templates/: source-page.md
src/lib/: commands.js  core.js  lark.js  lock.js  search.js
src/scripts/: build-index.js  postinstall.js
src/skills/templates/: entity-topic-page.md
templates/: raw-material-page.md
tests/: USER-JOURNEY-SNAPSHOT.md  cmd-search-perf.test.js  commands.test.js  core-refactor.test.js  core.test.js  docs-and-structure.test.js  fetch-modes.test.js  integration.test.js  lark.test.js  lock-lark-perf.test.js  lock.test.js  perf-optimizations.test.js  postinstall.test.js  search.test.js
wiki/: index.md
原始资料/wiki/: claude-code-deepwiki-2026.md
原始资料/论文/: autoharness-lou-2026.md
维基/: 索引.md
维基/.obsidian/: workspace.json
维基/主题/: 个人知识管理.md  智能体护栏与约束.md  检索增强生成（RAG）.md  知识编译vs知识检索.md  程序搜索与代码合成.md
维基/来源/: autoharness-lou-2026.md  llm-wiki-karpathy.md
